--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="main.css">
-    <title>Todo List</title>
+    <title>قائمة العبادات اليومية</title>
 </head>
 <body>
     <div class="container">
+        <h1>قائمة العبادات اليومية</h1>
         <div class="form">
             <input type="text" class="input">
-            <input type="submit" class="add" value="add it">
+            <input type="submit" class="add" value="إضـافـــة">
             <div class="error"></div>
         </div>
+        <ul class="nav">
+            <li>كل المهام</li>
+            <li>المهام المكتملة</li>
+            <li>المهام الحالية</li>
+        </ul>
+        <div class="no-tasks">
+            
+        </div>
         <div class="tasks">
-            <div class="task">
+            <!-- <div class="task">
                 <div class="txt">task number 1 Lorem ipsum dolor sit amet.</div>
                 <div class="actions">
                     <div class="btn done">c</div>
@@ -35,6 +44,14 @@
                     <div class="btn done">c</div>
                     <div class="btn delete">d</div>
                 </div>
+            </div> -->
+        </div>
+        <div class="info">
+            <div class="quantity">
+                عدد المهام 6 مهمة
+            </div>
+            <div class="delete-all">
+                مسح جميع المهام
             </div>
         </div>
     </div>
