--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
         <div class="form">
             <input type="text" class="input">
             <input type="submit" class="add" value="إضـافـــة">
-            <div class="error"></div>
         </div>
+        <div class="error"></div>
+        <hr>
         <ul class="nav">
-            <li>كل المهام</li>
+            <li class="active">كل المهام</li>
             <li>المهام المكتملة</li>
             <li>المهام الحالية</li>
         </ul>
