--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <hr>
         <ul class="nav filter-nav">
             <li class="all" data-type="all">كل المهام</li>
-            <li class="comp active" data-type="comp">المهام المكتملة</li>
+            <li class="comp" data-type="comp">المهام المكتملة</li>
             <li class="current" data-type="current">المهام الحالية</li>
         </ul>
         <div class="no-tasks">
