First Version To deploy

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="message">
         <p class="txt"></p>
-        <div class="undo">الغاء</div>
+        <div class="undo">الغـَــاء</div>
     </div>
     <div class="container">
         <h1>قَائِمَةُ العِبَادَاتِ اليَوميَّـة</h1>
@@ -26,7 +26,6 @@
             <li class="current" data-type="current">المهام الحالية</li>
         </ul>
         <div class="no-tasks">
-            
         </div>
         <div class="tasks">
             <!-- <div class="task">
@@ -56,9 +55,11 @@
                 
             </div>
             <div class="delete-all">
-                مسح جميع المهام
+                مسح الجميع
             </div>
         </div>
+        <img class="celever-icon" src="imgs/icons/niqap2.svg" alt="">
+        <!-- <div class="celever-icon"></div> -->
     </div>
 
     <script src="main.js"></script>
