--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="error"></div>
         <hr>
         <ul class="nav filter-nav">
-            <li class="all" data-type="all">كل المهام</li>
+            <li class="all active" data-type="all">كل المهام</li>
             <li class="comp" data-type="comp">المهام المكتملة</li>
             <li class="current" data-type="current">المهام الحالية</li>
         </ul>
