--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 
             </div>
             <div class="delete-all">
-                مسح الجميع
+                مَسحُ الجَمِيع
             </div>
         </div>
         <img class="celever-icon" src="imgs/icons/niqap2.svg" alt="">
