--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
         <img class="celever-icon" src="imgs/icons/niqap2.svg" alt="">
         <!-- <div class="celever-icon"></div> -->
     </div>
-
+    
+    <div class="copies">
+        <div class="l1">نسخة فريدة خاصة ب : ذاتِ النِقَـاب</div>
+        <div class="l2">أسمَــاء بنــت عَبدالعَظِيــم</div>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
